--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest shapes.test.js"
+    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^8.2.5"
+    "fs": "^0.0.1-security",
+    "inquirer": "^8.2.5",
+    "svg.js": "^2.7.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
